--- a/homepage.html
+++ b/homepage.html
@@ -37,24 +37,24 @@
         </div>
         <div class="row">
             <div class="col-2 text-center">
-                <i class="fas fa-futbol"></i> <!-- Football icon -->
+                <i class="football.png"></i> <!-- Football icon -->
                 <p>Football</p>
             </div>
             <div class="col-2 text-center">
-                <i class="fas fa-basketball-ball"></i> <!-- Basketball icon -->
+                <i class="basketball.png"></i> <!-- Basketball icon -->
                 <p>Basketball</p>
             </div>
             <div class="col-2 text-center">
-                <i class="fas fa-volleyball"></i> <!-- Baseball icon -->
-                <p>Baseball</p>
+                <i class="cricket.png"></i> <!-- Baseball icon -->
+                <p>Cricket</p>
             </div>
             <div class="col-2 text-center">
-                <i class="fas fa-badminton"></i> <!-- Hockey icon -->
-                <p>Hockey</p>
+                <i class="tennis.png"></i> <!-- Hockey icon -->
+                <p>Tennis</p>
             </div>
             <div class="col-2 text-center">
-                <i class="fas fa-table-tennis"></i> <!-- Table Tennis icon -->
-                <p>Table Tennis</p>
+                <i class="f1.png"></i> <!-- Table Tennis icon -->
+                <p>Formula 1</p>
             </div>
         </div>
     </div>
