--- a/homepage.html
+++ b/homepage.html
@@ -37,23 +37,23 @@
         </div>
         <div class="row">
             <div class="col-2 text-center">
-                <i class="football.png"></i> <!-- Football icon -->
+                <img src="football.png" alt="App Logo" width="60"> <!-- Football icon -->
                 <p>Football</p>
             </div>
             <div class="col-2 text-center">
-                <i class="basketball.png"></i> <!-- Basketball icon -->
+                <img src="basketball.png" alt="App Logo" width="60"><!-- Basketball icon -->
                 <p>Basketball</p>
             </div>
             <div class="col-2 text-center">
-                <i class="cricket.png"></i> <!-- Baseball icon -->
+                <img src="cricket.png" alt="App Logo" width="60"><!-- Baseball icon -->
                 <p>Cricket</p>
             </div>
             <div class="col-2 text-center">
-                <i class="tennis.png"></i> <!-- Hockey icon -->
+                <img src="tennis.png" alt="App Logo" width="60"><!-- Hockey icon -->
                 <p>Tennis</p>
             </div>
             <div class="col-2 text-center">
-                <i class="f1.png"></i> <!-- Table Tennis icon -->
+                <img src="f1.png" alt="App Logo" width="60"><!-- Table Tennis icon -->
                 <p>Formula 1</p>
             </div>
         </div>
